<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jersey Customizer</string>
    <string name="title_edit">Edit the Jersey</string>
    
    <string name="start_name">FISHER</string>
    <string name="start_number">42</string>
    <string name="start_color_index">3</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="red_jersey">Red Jersey</string>
    <string name="blue_jersey">Blue Jersey</string>    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="color_prompt">Choose a color:</string>
    <string-array name="color_array">
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
</resources>
